@@ -249,6 +249,7 @@ Included
 - Report viewer now includes `Copy Digests` for digest-only clipboard export (`runId`, artifact fingerprint/digest, report-card digest, safe/operator receipt digests, compare receipt/report digests).
 - Report viewer now supports keyboard copy shortcuts: `Ctrl+C` for summary copy and `Ctrl+Shift+C` for digest-only copy.
 - Report viewer summary panel now also surfaces `Status`, `Run Id`, and `Library Key`; summary clipboard output includes `libraryKey`.
+- Report viewer and Launchpad History details now also surface compare semantics (`Compare Verdict`, `Compare Buckets`, `Compare Bucket Count`, `Compare Change Count`) with deterministic `compare_report.txt` fallback when compare receipt JSON is absent.
 - Launchpad History UX improvements: direct View Report action and keyboard open behavior (double-click/Enter).
 - Report viewer now includes a collapsed Adapter Evidence section (shown only when adapter/capability artifacts exist), with quick-open buttons for capability, summary, and findings JSON artifacts.
 - Launchpad History now shows an Adapter tag column (including plugin usage and denied-capability marker) derived from the latest run receipt.
